<resources>

    <string name="app_name">Mindy</string>
    <string name="app_name_underlined"><u>Mindy</u></string>
    <string name="drawer_open">Öppna</string>
    <string name="drawer_close">Stäng</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="swtchpref_notification">Notiser</string>
    <string name="title_fragment_index">Aktuellt</string>
   
    <!-- Om-sidan -->
    <string name="about_version_title">Version 1.0</string>
    <string name="about_text">Mindy är din hjälpreda oavsett om du är stressad över studierna eller behöver hjälp att strukturera upp studierna. Med hjälp av Mindfulness, Positiv psykologi och Studieteknik kommer denna skräddarsydda app hitta lämpliga övningar åt dig.</string>
    <string name="about_developers">Utvecklad av:\n S. Andersson, H. Andersson, P. Eriksson, R. Hallberg, M. Thyren och V. Åkerskog.</string>
	<string name="about_link">Gilla oss på Facebook:\n https://www.facebook.com/MindyApp</string>
    
    <string name="expanded_text">Expanderad text</string>
    <string name="logo_description">Mindy Logo</string>
    
    <!-- Tre positiva saker -->
    <string name="add_positive_one">Skriv glad sak</string>
    <string name="add_positive_two">Nästa bra sak</string>
    <string name="add_positive_three">Sista saken</string>
    <string name="radio_button_yesterday">Igår</string>
    <string name="radio_button_today">Idag</string>
    <string name="button_add_new">Lägg till ny</string>
    <string name="button_abort">Avbryt</string>
    <string name="button_ok">Klar</string>

    <!-- Aktivitetsnamn -->
    <string name="sleeping_pill">Sömnpiller</string>
    <string name="pomodoro">Pomodorotimer</string>
    <string name="three_pos">Tre positiva saker</string>
    <string name="body_focus">Kroppsscanning</string>
    <string name="diary">Studiedagbok</string>
         
    <!-- Korta beskrivningar av aktiviteter -->
    <string name="short_desc_sleeping_pill">Perfekt för dig som har svårt att sova på kvällarna. Prova övningen liggandes sängen när du gått och lagt dig.</string>
    <string name="short_desc_pomodoro">Timer för att plugga fokuserat.</string>
    <string name="short_desc_three_pos">Boosta ditt allmäntillstånd genom att lägga några få minuter på denna övning varje kväll.</string>
    <string name="short_desc_body_focus">Guidad meditation att använda dagligen för återhämtning.</string>
    <string name="short_desc_diary">En dagbok över vad du har lärt dig.</string>
    
    <!-- Långa beskrivningar av aktiviteter -->
    <string name="long_desc_sleeping_pill">Detta är en övning du kan lyssna på precis innan du ska sova. Det är en bra introduktion till mindfulness eftersom att den har potential till att förbättra sömnen och om du inte somnar så har du ett ypperligt tillfälle att öva mindfulness.</string>
    <string name="long_desc_pomodoro">Timer för att plugga fokuserat.</string>
    <string name="long_desc_three_pos">Denna övning bygger på att du varje kväll fyller i tre saker som gjort dig glad under dagen. På kort tid kommer du troligtvis känna dig allmänt gladare och bli uppmärksam på de små goda detaljerna i vardagen.</string>
    <string name="long_desc_body_focus">Denna övning kan du använda dig av dagligen som exempelvis en paus efter en lång tids studerande. Den guidar dig igenom kroppens delar och eftersom den är lite längre får du chans att testa tålamodet. Om du är väldigt stressad kan denna övning påfresta tålamodet. Men efter en tids användande kan den fungera som återhämtning.</string>
    <string name="long_desc_diary">En dagbok över vad du har lärt dig.</string>
    
    <!-- Mindfulnessbeskrivning -->
    <string name="desc_mindfulness">Mindfulness handlar kort om att vara medveten om dina tankar och känslor. Genom att öva på att fokusera på dina andetag t ex,  hamnar du i ett sorts lugn som behövs för återhämtning i alltfler studenters stressiga vardag. Dessutom är andetaget med dig hela tiden och ger en bra indikation på hur du mår för stunden. Genom att träna upp att komma tillbaka till andetaget varje gång en annan tanke möter dig blir din förmåga att fokusera bättre och då kommer du troligtvis prestera bättre i både föreläsningssalen och i pluggbänken. </string>
        
    <!-- Ljuduppspelning -->
    <string name="index_play">Spela</string>
    <string name="index_pause">Paus</string>
    <string name="index_stop">Stopp</string>
    <string name="play_button">Tryck här</string>

    <string name="title_note">Mindy</string>
    <string name="body_note">Body</string>
    <string name="confirm_note">Bekräfta</string>

    <string name="create_note_button_text">Nytt inlägg</string>
    <string name="cancel">Avbryt</string>
    <string name="diary_confirm">Spara inlägg</string>
    <string name="diary_delete_note">Ta bort inlägg</string>
    <string name="diary_menu_delete">Ta bort</string>
    <string name="diary_menu_insert">Lägg till</string>
    <string name="diary_title">Rubrik</string>
    <string name="diary_title_hint">Skriv en rubrik</string>
    <string name="diary_body">Inlägg</string>
    <string name="diary_body_hint">Vad har du lärt dig?</string>
    <string name="diary_no_entries">Inga inlägg ännu</string>
    <string name="diary_no_entries_desc">Vad har du lärt dig idag? Studiedagboken hjälper dig minnas vad du lärt dig genom att låta dig återkoppla vid ett senare tillfälle. \n\nSkapa ett nytt inlägg för att börja använda studiedagboken.</string>
    <string name="diary_empty_fields">Kunde inte spara inlägg. Inga tomma fält är tillåtna.</string>
    <string name="diary_entry_deleted">Inlägg raderat</string>
    <string name="diary_could_not_delete">Inlägget kunde inte raderas</string>
    <string name="index_diary_description">Detta lärde du dig igår</string>
    <string name="index_diary_description_secondary">Detta lärde du dig senast</string>
    <string name="albin">Uppläst av Albin Hagberg Medin, http://www.modernmindfulness.se</string>
    
    <!-- Frågeformulär -->
    <string name="eval_question_1_text">Tycker du att du har en studieteknik som ger dig de resultat du vill uppnå?</string>
    <string name="eval_question_2_text">Har du bra balans mellan studier och fritid?</string>
    <string name="eval_question_3_text">Hur nöjd känner du dig med dina studieresultat?</string>
    <string name="eval_question_4_text">Hur tycker du att bristande studieteknik påverkar din mentala hälsa?</string>
    <string name="eval_question_1_answer_left">Stämmer inte alls</string>
    <string name="eval_question_1_answer_right">Stämmer bra</string>
    <string name="eval_question_2_answer_left">För mycket studier</string>
    <string name="eval_question_2_answer_right">För mycket fritid</string>
    <string name="eval_question_3_answer_left">Inte alls nöjd</string>
    <string name="eval_question_3_answer_right">Mycket nöjd</string>
    <string name="eval_question_4_answer_1">Sömnbrist</string>
    <string name="eval_question_4_answer_2">Dåligt självförtroende</string>
    <string name="eval_question_4_answer_3">Osäkerhet i grupparbete</string>
    <string name="eval_question_4_answer_4">Tror inte på min förmåga</string>
    <string name="eval_submit">Fortsätt</string>
    <string name="eval_skip">Hoppa över</string>
    <string name="eval_intro">Välkommen till Mindy! För att få en så bra och anpassad upplevelse som möjligt ber vi dig att besvara frågorna nedan så ärligt du kan. Svaren är självklart helt annonyma.</string>

    
    <string name="index_threepos_title">Tre positiva saker</string>
    <string name="index_threepos_description">Detta gjorde dig glad igår</string>
    <string name="index_threepos_description_secondary">Detta gjorde dig glad senast</string>
    
    <string name="index_threepos_default_first">Här visas det senaste inlägget du gjorde i övningen \"Tre positiva saker\".</string>
    <string name="index_threepos_default_second">Denna övning hjälper dig att minnas händelser som påverkade dig på ett bra sätt.</string>
    <string name="index_threepos_default_third">Du har inte gjort några inlägg ännu. Gå till Övningar i sidomenyn för att skriva ett inlägg.</string>
    
    <string name="exercises">Aktiviteter</string>
    
    <!-- Pomodorotimer -->
    <string name="pomodoro_timer">Timer</string>
    <string name="pomodoro_timer_start">Start</string>
    <string name="pomodoro_timer_stop">Stopp</string>
    <string name="pomodoro_timer_placeholder">25:00</string>
    

    
</resources>