<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light_purple_3">
    
    
  	<TextView 
  	 	android:id="@+id/about"
  	 	android:layout_width="match_parent"
  	 	android:layout_height="wrap_content"
  	 	android:textSize="40sp"
  	 	android:text="@string/about"
  	 	   	
  	    />
  	<ImageView
        android:id="@+id/about_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher"
        android:contentDescription="@string/logo_description"
        />
   	<TextView 
  	 	android:id="@+id/about_version"
  	 	android:layout_width="match_parent"
  	 	android:layout_height="wrap_content"
  	 	android:gravity="center"
  	 	android:textSize="20sp"
  	 	android:text="@string/about_version_title"
  	    />   
   	<TextView 
  	 	android:id="@+id/about_text"
  	 	android:layout_width="match_parent"
  	 	android:layout_height="wrap_content"
  	 	android:gravity="center"
  	 	android:textSize="15sp"
  	 	android:text="@string/about_text"
  	    />   
  	 <TextView 
  	 	android:id="@+id/about_developers"
  	 	android:layout_width="match_parent"
  	 	android:layout_height="wrap_content"
  	 	android:gravity="center"
  	 	android:textSize="12sp"
  	 	android:text="@string/about_developers"
  	    />   
</LinearLayout>
