<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color_grey" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/three_positive_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="10dip"
            android:gravity="center_horizontal"
            android:text="@string/long_desc_three_pos"
            android:textColor="@color/dark_purple_3"
            android:textSize="12sp" />

    	 <View
            android:id="@+id/divider_diary_bottom"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="0dp"
            android:background="@color/divider_background_dark"
            android:padding="0dp" />
        <Button
            android:id="@+id/add_threepos_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_button"
            android:text="@string/button_add_new"
            android:textColor="@drawable/selector_button_text" />
        
    	 <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="0dp"
            android:background="@color/divider_background_dark"
            android:padding="0dp" />

        <LinearLayout
            android:id="@+id/input_container"
            android:layout_width="fill_parent"
            android:layout_height="220dip"
            android:layout_marginBottom="-100dip"
            android:orientation="vertical"
            android:visibility="gone" >

            <RadioGroup
                android:id="@+id/date_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/yesterday_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.5"
                    android:text="@string/radio_button_yesterday" />

                <RadioButton
                    android:id="@+id/today_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.5"
                    android:checked="true"
                    android:text="@string/radio_button_today" />
            </RadioGroup>

            <EditText
                android:id="@+id/positive_one_input"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_positive_one"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/positive_two_input"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_positive_two"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/positive_three_input"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_positive_three"
                android:imeActionId="@+id/create"
                android:imeActionLabel="Skapa ny"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

            <Button
                android:id="@+id/ok_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/button_ok" />
        </LinearLayout>
        
        
        
        
    </LinearLayout>
    

</ScrollView>