<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="48dp"
    android:orientation="vertical"
    android:id="@+id/note_edit" >

    

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diary_title" />

        <EditText
            android:id="@+id/diary_title"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diary_body" />

    <EditText
        android:id="@+id/diary_body"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_gravity="top"
        android:layout_weight="1"
        android:gravity="top"
        android:scrollbars="vertical" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/new_note_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/diary_confirm"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/diary_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="12dp"
            android:text="@string/diary_confirm" />
    </RelativeLayout>

</LinearLayout>